changes for front end implementations